--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -26,10 +26,12 @@
 
     <div class="form-group">
         <label th:for="skills">Skills</label>
+        <select name="skillID">
         <th:block th:each="skill : ${skills}">
             <input type="checkbox" name="skills" th:value="${skill.id}">
             <label th:text="${skill.name}"></label>
         </th:block>
+        </select>
         <a th:href="@{'/skills/add'}">Add Skills</a>
     </div>
 
