--- a/src/main/resources/templates/employers/add.html
+++ b/src/main/resources/templates/employers/add.html
@@ -8,18 +8,22 @@
 
 <form method="post" style="max-width:600px;">
     <div class="form-group">
-        <label th:for="name">Employer Name</label>
-        <input class="form-control" th:field="${employer.name}" />
-        <span th:errors="${employer.name}" class="error"></span>
+        <label th:for="name">Employer Name
+        <input class="form-control" th:field="${employer.name}">
+        </label>
+        <p th:errors="${employer.name}" class="error"></p>
     </div>
 
     <div class="form-group">
-        <label th:for="location">Employer Location</label>
-        <input class="form-control" th:field="${employer.location}" />
-        <span th:errors="${employer.location}" class="error"></span>
+        <label th:for="location">Employer Location
+        <input class="form-control" th:field="${employer.location}">
+        </label>
+        <p th:errors="${employer.location}" class="error"></p>
     </div>
 
-    <input type="submit" value="Add Employer" />
+    <div class="form-group">
+    <input type="submit" value="Add Employer" class="btn btn-success">
+    </div>
 </form>
 
 </body>
