--- a/src/main/resources/templates/employers/index.html
+++ b/src/main/resources/templates/employers/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head">
+
 </head>
 <body>
 
 <div th:replace="fragments :: page-header"></div>
 
-<p th:unless="${employers} and ${employers.size()}">no jobs!</p>
+<p th:unless="${employers} and ${employers.size()}">no employers!</p>
 
 <div class="container body-content">
     <h2>Employers</h2>
