--- a/src/main/resources/templates/skills/add.html
+++ b/src/main/resources/templates/skills/add.html
@@ -8,18 +8,22 @@
 
 <form method="post" style="max-width:600px;">
     <div class="form-group">
-        <label th:for="name">Skill Name</label>
-        <input class="form-control" th:field="${skill.name}" />
-        <span th:errors="${skill.name}" class="error"></span>
+        <label th:for="name">Skill Name
+        <input th:field="${skill.name}" class="form-control">
+        </label>
+        <p class="error" th:errors="${skill.name}"></p>
     </div>
 
     <div class="form-group">
-        <label th:for="description">Skill Description</label>
-        <input class="form-control" th:field="${skill.description}" />
-        <span th:errors="${skill.description}" class="error"></span>
+        <label th:for="description">Skill Description
+        <input th:field="${skill.description}" class="form-control">
+        </label>
+        <p class="error" th:errors="${skill.description}"></p>
     </div>
 
-    <input type="submit" value="Add Skill" />
+    <div class="form-group">
+    <input type="submit" value="Add Skill" class="btn btn-success">
+    </div>
 </form>
 
 </body>
