--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -16,23 +16,37 @@
 
     <div class="form-group">
         <label th:for="employer">Employer</label>
-        <select name="employerId">
+        <select th:field="${employer.name}">
             <option th:each="employer : ${employers}"
                     th:text="${employer.name}"
-                    th:value="${employer.id}"></option>
+                    th:value="${employer}"></option>
+        </select>
+        <a th:href="@{'/employers/add'}">Add Employers</a>
+    </div>
+
+    <div class="form-group">
+    <label th:for="location">Location</label>
+        <select th:field="${employer.location}">
+            <option th:each="employer : ${employers}"
+                    th:text="${employer.location}"
+                    th:value="${employer}"></option>
         </select>
         <a th:href="@{'/employers/add'}">Add Employers</a>
     </div>
 
     <div class="form-group">
         <label th:for="skills">Skills</label>
-        <select name="skillID">
         <th:block th:each="skill : ${skills}">
             <input type="checkbox" name="skills" th:value="${skill.id}">
             <label th:text="${skill.name}"></label>
         </th:block>
-        </select>
         <a th:href="@{'/skills/add'}">Add Skills</a>
+    </div>
+
+    <div class="form-group">
+        <label th:for="description">Description
+        <input th:field="${skill.description}" class = "form-control">
+        </label>
     </div>
 
     <input type="submit" value="Add Job" />
