--- a/src/main/resources/templates/skills/index.html
+++ b/src/main/resources/templates/skills/index.html
@@ -9,10 +9,13 @@
 <p th:unless="${skills} and ${skills.size()}">no skills!</p>
 
 <div class="container body-content">
-    <h2>Skills</h2>
+    <h2>Skill</h2>
     <ul>
         <li th:each="skill : ${skills}">
             <a th:href="@{'/skills/view/' + ${skill.id}}" th:text="${skill.name}"></a>
+        </li>
+        <li th:each="skill : ${skills}">
+            <a th:href="'/jobs?skillId=' + ${skill.id}" th:text="${skill.name}"></a>
         </li>
     </ul>
     <a th:href="@{'/skills/add'}">Add Skills</a>
