--- a/src/main/resources/templates/skills/add.html
+++ b/src/main/resources/templates/skills/add.html
@@ -18,11 +18,10 @@
         <label th:for="description">Skill Description
         <input th:field="${skill.description}" class="form-control">
         </label>
-        <p class="error" th:errors="${skill.description}"></p>
     </div>
 
     <div class="form-group">
-    <input type="submit" value="Add Skill" class="btn btn-success">
+    <input type="submit" value="Add Skill">
     </div>
 </form>
 
