--- a/src/main/resources/templates/skills/view.html
+++ b/src/main/resources/templates/skills/view.html
@@ -7,14 +7,9 @@
 
 <nav th:replace="fragments :: page-header"></nav>
 
-<div class="job-listing">
+<div class="skill-listing">
     <p th:text="${'Name: ' + skill.name}"></p>
     <p th:text="${'Description: ' + skill.description}"></p>
-    <p> Jobs:
-        <ul>
-            <li th:each="job : ${skill.jobs}">
-                <a th:href="@{'/view/' + ${job.id}}" th:text="${job.name}"></a>
-            </li>
-        </ul>
-    </p>
 </div>
+</body>
+</html>
