--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -13,10 +13,13 @@
     <p>
         Employer: <a th:href="@{'/employers/view/' + ${job.employer.id}}" th:text="${job.employer.name}"></a>
     </p>
+    <p>
+        Location: <a th:href="@{'/employers/view/' + ${job.employer.id}}" th:text="${job.employer.location}"></a>
+    </p>
     <p> Skills:
         <ul>
             <li th:each="skill : ${job.skills}">
-                <a th:href="@{'/skills/view/' + ${skill.id}}" th:text="${skill.name}"></a>
+                <a th:href="@{'/skills/view/' + ${job.skill.id}}" th:text="${job.skill.name}"></a>
             </li>
         </ul>
     </p>
