--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -10,53 +10,44 @@
 <form method="post" style="max-width:600px;">
     <div class="form-group">
         <label th:for="name">Name</label>
-        <input class="form-control" th:field="${job.name}">
+        <input class="form-control" th:field="${job.name}" />
         <span th:errors="${job.name}" class="error"></span>
     </div>
 
     <div class="form-group">
-        <label th:for="employer">Employer
-        <select th:field="${job.employer}">
+        <label th:for="employer">Employer</label>
+        <select th:field="${job.employer.name}">
             <option th:each="employer : ${employers}"
                     th:text="${job.employer.name}"
-                    th:value="${job.employer.id}"></option>
+                    th:value="${employer}"></option>
         </select>
-            <span th:errors="form-control" th:field="${job.employer.name}"></span>
-        </label>
-
-    <label th:for="location">Location</label>
-        <select th:field="${job.employer}">
+        <a th:href="@{'/employers/add'}">Add Employers</a>
+    </div>
+    <div class="form-group">
+        <label th:for="location">Location</label>
+        <select th:field="${job.employer.location}">
             <option th:each="employer : ${employers}"
-                    th:text="${job.employer.location}"
-                    th:value="${job.employer.id}"></option>
+                    th:text="${employer.location}"
+                    th:value="${employer}"></option>
         </select>
-        <span th:errors="form-control" th:field="${job.employer.location}"></span>
-        </label>
         <a th:href="@{'/employers/add'}">Add Employers</a>
     </div>
 
     <div class="form-group">
         <label th:for="skills">Skills</label>
-        <select th:field="${job.skill}">
         <th:block th:each="skill : ${skills}">
-            <input type="checkbox" name="skills" th:value="${job.skill.id}">
-            <label th:text="${job.skill.name}"></label>
+            <input type="checkbox" name="skills" th:value="${skill.id}">
+            <label th:text="${skill.name}"></label>
         </th:block>
-            <span th:errors="form-control" th:field="${job.skill.name}"></span>
         <a th:href="@{'/skills/add'}">Add Skills</a>
-        </select>
     </div>
 
     <div class="form-group">
-        <label th:for="description">Description</label>
-        <input th:field="${job.skill}" class = "form-control">
-        <option th:each="skill : ${skills}"
-                th:text="${job.skill.description}"
-                th:value="${job.skill.id}"></option>
+        <label th:for="description">Description
+            <input th:field="${job.skill.description}" class = "form-control">
+        </label>
     </div>
-
-    <input type="submit" value="Add Job">
+    <input type="submit" value="Add Job" />
 </form>
 
 </body>
-</html>
