--- a/src/main/resources/templates/employers/add.html
+++ b/src/main/resources/templates/employers/add.html
@@ -8,23 +8,19 @@
 
 <form method="post" style="max-width:600px;">
     <div class="form-group">
-        <label th:for="name">Employer Name
-        <input class="form-control" th:field="${employer.name}">
-        </label>
-        <p th:errors="${employer.name}" class="error"></p>
+        <label th:for="name">Employer Name</label>
+        <input class="form-control" th:field="${employer.name}" />
+        <span th:errors="${employer.name}" class="error"></span>
     </div>
 
     <div class="form-group">
-        <label th:for="location">Location
-        <select th:field="${employer.location}" class="form-control">
-          </select>
-        </label>
-        <p th:errors="${employer.location}" class="error"></p>
+        <label th:for="location">Employer Location</label>
+        <input class="form-control" th:field="${employer.location}" />
+        <span th:errors="${employer.location}" class="error"></span>
+        <a th:href="@{'/employers/add'}">Add Employers</a>
     </div>
 
-    <div class="form-group">
-    <input type="submit" value="Add Employer">
-    </div>
+    <input type="submit" value="Add Employer" />
 </form>
 
 </body>
