--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -16,16 +16,16 @@
 
     <div class="form-group">
         <label th:for="employer">Employer</label>
-        <select th:field="${job.employer.name}">
+        <select th:field="${employer.name}">
             <option th:each="employer : ${employers}"
-                    th:text="${job.employer.name}"
+                    th:text="${employer.name}"
                     th:value="${employer}"></option>
         </select>
         <a th:href="@{'/employers/add'}">Add Employers</a>
     </div>
     <div class="form-group">
         <label th:for="location">Location</label>
-        <select th:field="${job.employer.location}">
+        <select th:field="${employer.location}">
             <option th:each="employer : ${employers}"
                     th:text="${employer.location}"
                     th:value="${employer}"></option>
@@ -44,7 +44,7 @@
 
     <div class="form-group">
         <label th:for="description">Description
-            <input th:field="${job.skill.description}" class = "form-control">
+            <input th:field="${skill.description}" class = "form-control">
         </label>
     </div>
     <input type="submit" value="Add Job" />
