--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -7,19 +7,19 @@
 
 <nav th:replace="fragments :: page-header"></nav>
 
-<div class="job-listing">
+<div>
     <p th:text="${'ID: ' + job.id}"></p>
     <p th:text="${'Name: ' + job.name}"></p>
     <p>
-        Employer: <a th:href="@{'/employers/view/' + ${job.employer.id}}" th:text="${job.employer.name}"></a>
+        Employer: <a th:href="@{'/employers/view' + ${employer.id}}" th:text="${employer.name}"></a>
     </p>
     <p>
-        Location: <a th:href="@{'/employers/view/' + ${job.employer.id}}" th:text="${job.employer.location}"></a>
+        Location: <a th:href="@{'/employers/view' + ${employer.id}}" th:text="${employer.location}"></a>
     </p>
     <p> Skills:
         <ul>
-            <li th:each="skill : ${job.skills}">
-                <a th:href="@{'/skills/view/' + ${job.skill.id}}" th:text="${job.skill.name}"></a>
+            <li th:each="skill : ${skills}">
+                <a th:href="@{'/skills/view' + ${skill.id}}" th:text="${skill.name}"></a>
             </li>
         </ul>
     </p>
