--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -16,19 +16,10 @@
 
     <div class="form-group">
         <label th:for="employer">Employer</label>
-        <select th:field="${employer.name}">
+        <select name ="employerId">
             <option th:each="employer : ${employers}"
                     th:text="${employer.name}"
-                    th:value="${employer}"></option>
-        </select>
-        <a th:href="@{'/employers/add'}">Add Employers</a>
-    </div>
-    <div class="form-group">
-        <label th:for="location">Location</label>
-        <select th:field="${employer.location}">
-            <option th:each="employer : ${employers}"
-                    th:text="${employer.location}"
-                    th:value="${employer}"></option>
+                    th:value="${employer.id}"></option>
         </select>
         <a th:href="@{'/employers/add'}">Add Employers</a>
     </div>
@@ -42,11 +33,6 @@
         <a th:href="@{'/skills/add'}">Add Skills</a>
     </div>
 
-    <div class="form-group">
-        <label th:for="description">Description
-            <input th:field="${skill.description}" class = "form-control">
-        </label>
-    </div>
     <input type="submit" value="Add Job" />
 </form>
 
