--- a/src/main/resources/templates/employers/add.html
+++ b/src/main/resources/templates/employers/add.html
@@ -7,20 +7,23 @@
 <nav th:replace="fragments :: page-header"></nav>
 
 <form method="post" style="max-width:600px;">
-    <div class="form-group">
+    <div class="form-group" th:each = "employer : ${employers}">
+        <ul>
+            <li>
         <label th:for="name">Employer Name</label>
         <input class="form-control" th:field="${employer.name}" />
         <span th:errors="${employer.name}" class="error"></span>
-    </div>
-
-    <div class="form-group">
-        <label th:for="location">Employer Location</label>
-        <input class="form-control" th:field="${employer.location}" />
-        <span th:errors="${employer.location}" class="error"></span>
+            </li>
+            <li>
+                <label th:for="location">Employer Location</label>
+                <input class="form-control" th:field="${employer.location}" />
+                <span th:errors="${employer.location}" class="error"></span>
+            </li>
+        </ul>
         <a th:href="@{'/employers/add'}">Add Employers</a>
     </div>
 
-    <input type="submit" value="Add Employer" />
+           <input type="submit" value="Add Employer" />
 </form>
 
 </body>
