--- a/src/main/resources/templates/skills/add.html
+++ b/src/main/resources/templates/skills/add.html
@@ -7,7 +7,7 @@
 <nav th:replace="fragments :: page-header"></nav>
 
 <form method="post" style="max-width:600px;">
-    <div class="form-group">
+    <div class="form-group" th:each = "skill : ${skills}">
         <label th:for="name">Skill Name</label>
         <input class="form-control" th:field="${skill.name}" />
 
@@ -16,8 +16,8 @@
 
     <div class="form-group">
         <label th:for="description">Skill Description</label>
-        <input class="form-control" th:field="${skill.description}" />
-        <span th:errors="${skill.description}" class="error"></span>
+        <input class="form-control" th:field="${skill.name}" />
+        <span th:errors="${skill.name}" class="error"></span>
         <a th:href="@{'/skills/add'}">Add Skills</a>
     </div>
 
