Add fixed and tables added.

--- a/src/main/resources/templates/employers/add.html
+++ b/src/main/resources/templates/employers/add.html
@@ -7,7 +7,7 @@
 <nav th:replace="fragments :: page-header"></nav>
 
 <form method="post" style="max-width:600px;">
-    <div class="form-group" th:each = "employer : ${employers}">
+    <div class="form-group">
         <ul>
             <li>
         <label th:for="name">Employer Name</label>
